# StriDe

./: .gitignore  Makefile.am  PBHybridCAssembly.sh  README.md  StriDe_Linux_64bit  configure.ac  test
Algorithm/: ErrorCorrectProcess.cpp  ErrorCorrectProcess.h  KmerOverlaps.cpp  KmerOverlaps.h  Makefile.am  OverlapAlgorithm.cpp  OverlapAlgorithm.h  OverlapBlock.cpp  OverlapBlock.h  QCProcess.cpp
Bigraph/: Bigraph.cpp  Bigraph.h  Edge.cpp  Edge.h  Vertex.cpp  Vertex.h
Concurrency/: OverlapProcess.cpp  SequenceProcessFramework.h
FMIndexWalk/: FMIndexWalkProcess.cpp  FMIndexWalkProcess.h  Makefile.am  SAINode.cpp  SAINode.h  SAIOverlapTree.cpp  SAIOverlapTree.h  SAIPBHybridCTree.cpp  SAIPBHybridCTree.h  SAIPBSelfCTree.cpp  SAIPBSelfCTree.h  SAIntervalTree.cpp  SAIntervalTree.h
PacBio/: HashtableSearch.cpp  HashtableSearch.h  IntervalTree.h  LongReadCorrectByOverlap.cpp  LongReadCorrectByOverlap.h  LongReadOverlap.cpp  LongReadOverlap.h  Makefile.am  PBOverlapTree.cpp  PBOverlapTree.h  PacBioCorrectionProcess.cpp  PacBioCorrectionProcess.h  PacBioHybridCorrectionProcess.cpp  PacBioHybridCorrectionProcess.h  PacBioSelfCorrectionProcess.cpp  PacBioSelfCorrectionProcess.h  RollingNode.cpp  RollingNode.h  RollingPBSelfCTree.cpp  RollingPBSelfCTree.h  SAIPBHybridCTree.cpp  SAIPBHybridCTree.h  SAIPBSelfCTree.cpp  SAIPBSelfCTree.h  SeedFeature.cpp  SeedFeature.h  ShortReadOverlapTree.cpp  ShortReadOverlapTree.h
StriDe/: FMIndexWalk.cpp  FMIndexWalk.h  Makefile.am  OverlapCommon.cpp  OverlapCommon.h  PacBioCorrection.cpp  PacBioCorrection.h  PacBioHybridCorrection.cpp  PacBioHybridCorrection.h  SGACommon.h  StriDe.cpp  asmlong.cpp  asmlong.h  assemble.cpp  assemble.h  correct.cpp  filter.cpp  grep.cpp  grep.h  index.cpp  index.h  kmerfreq.cpp  kmerfreq.h  overlap.cpp  preprocess.cpp  strideall.cpp  strideall.h  subgraph.cpp
StringGraph/: GraphSearchTree.h  Makefile.am  RemovalAlgorithm.cpp  SGAlgorithms.cpp  SGAlgorithms.h  SGSearch.cpp  SGSearch.h  SGUtil.cpp  SGUtil.h  SGVisitors.cpp  SGVisitors.h  SGWalk.cpp  SGWalk.h
SuffixTools/: BWT.h  BWTAlgorithms.cpp  BWTAlgorithms.h  BWTCARopebwt.cpp  BWTCARopebwt.h  BWTIndexSet.h  BWTInterval.h  Makefile.am  RLBWT.h  SampledSuffixArray.cpp  SampledSuffixArray.h  SparseGapArray.h
Util/: HashMap.h  KmerDistribution.cpp  KmerDistribution.h  Makefile.am  Match.cpp  Match.h  ReadInfoTable.cpp  ReadInfoTable.h  SeqCoord.h  SeqReader.cpp  SeqReader.h  StdAlnTools.cpp  Util.h
