noinst_LIBRARIES = libfmindexwalk.a

libfmindexwalk_a_CPPFLAGS = \
	-I$(top_srcdir)/Algorithm \
	-I$(top_srcdir)/Bigraph \
	-I$(top_srcdir)/Util \
	-I$(top_srcdir)/StringGraph \
	-I$(top_srcdir)/SQG \
	-I$(top_srcdir)/SuffixTools \
	-I$(top_srcdir)/Thirdparty \
	-I$(top_srcdir)/GraphDiff \
    -I$(top_srcdir)/Concurrency

libfmindexwalk_a_SOURCES = \
        FMIndexWalkProcess.h FMIndexWalkProcess.cpp \
        SAIntervalTree.h SAIntervalTree.cpp
